--- a/index.html
+++ b/index.html
@@ -520,14 +520,41 @@ New contributors are always welcome!</p>
 <div class="sect3">
 <h4 id="_nutch">Nutch</h4>
 <div class="paragraph">
-<p>Heavy batchs, recrawling seems complicated</p>
+<p>Big, big Java project. Open-source. Built for crawling all the web and can be distributed on several machines, such as on AWS or any other cloud provider, as well as  crawling a specific targeted group of websites, every x days or hours.
+The architecture is pretty heavy and has lots of dependencies (ant, gora, hbase, hadoop, etc.). Very powerful and manages scheduling, domain restriction, politeness, etc.
+Can be run in standalone without Hadoop. Very polite and makes sure that there is only one query per host running at the same time, to avoid being blacklisted.
+Run from the command.</p>
+</div>
+<div class="paragraph">
+<p>In distributed mode, Nutch need a full Hadoop stack (&#8230;&#8203;) and use (veryyyy) long-running MapReduce in order to sort and crawl URL.</p>
+</div>
+<div class="paragraph">
+<p>Last version is Nutch 2.x, which is a huge rewrite almost from scratch and therefore not so close to 1.x. However, Nutch 2.x is slower and has less features than Nutch 1.x.</p>
+</div>
+<div class="paragraph">
+<p>In addition to the crawler feature, Nutch is also a search engine and use Lucène to index documents.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_heristrix">Heristrix</h4>
 <div class="paragraph">
-<p>Powerful job definition
-No GUI</p>
+<p>Heritrix is the Internet Archive&#8217;s open-source, extensible, web-scale, archival-quality web crawler project.
+Have Web Control management interface. A powerful job definition, but based on Spring beans definition. Not designed to be scalable.</p>
+</div>
+<div class="paragraph">
+<p>Last version is 3.2.0 (Jan 2014).</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_scrapy">Scrapy</h4>
+<div class="paragraph">
+<p>Open-source Python project, best suited for scraping focused websites. Light and easy to use,.
+Useful when building a handmade parser on a known website in order to extract precise informations.</p>
+</div>
+<div class="paragraph">
+<p>Not distributed by default, so not a right tool for a huge amount of websites or big websites.
+Some initiatives aimed to add cluster features (Distributed Frontera and Scrapy Cluster) to Scrapy but are difficult to deploy since they are based on Kafka and/or HBase and need an Hadoop cluster.
+Politness is respected, but only one process can download on one host at a time.</p>
 </div>
 </div>
 </div>
@@ -1597,7 +1624,7 @@ the License.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-01-19 09:15:05 +01:00
+Last updated 2016-01-31 13:58:13 +01:00
 </div>
 </div>
 </body>
