Update Maven compatibility

--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@ $ dpkg -i mandrel.deb</pre>
 <div class="sect2">
 <h3 id="_from_the_sources">From the sources</h3>
 <div class="paragraph">
-<p>Mandrel uses Maven for its build system. Simply run:</p>
+<p>Mandrel uses Maven 3.3+ for its build system. Simply run:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -2142,7 +2142,7 @@ the License.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-02-25 17:43:10 +01:00
+Last updated 2016-02-29 17:21:10 +01:00
 </div>
 </div>
 </body>
